Browser fixes and other bits

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,6 @@
     <p class="h"><a href="#marinulon" class="top-btn">Return to top</a></p>
     <p>
-      Design and content &#169; <a href="http://twitter.com/marinsekesan" rel="me">Marin Sekesan</a>.
+      Design and content &#169; <a href="http://twitter.com/marinsekesan" rel="me" target="_blank">Marin Sekesan</a>.
       All Rights Reserved.
     </p>
 
