--- a/css/marinulon.css
+++ b/css/marinulon.css
@@ -593,7 +593,7 @@ header {
       cursor: pointer;
     }
     .folio__item:hover {
-      border: 3px solid #555;
+      outline: 3px solid #222;
     }
   }
     .folio__item:before {
