--- a/css/marinulon.css
+++ b/css/marinulon.css
@@ -591,10 +591,14 @@ header {
       vertical-align: top;
       width: 33.3333%;
       cursor: pointer;
+      overflow: hidden;
     }
-    .folio__item:hover {
-      background-color: rgba(42, 64, 87, .4);
-      color: rgba(42, 64, 87, .4);
+    .folio__item:hover img {
+      -moz-transform: scale(1.5);
+      -webkit-transform: scale(1.5);
+      -o-transform: scale(1.5);
+      -ms-transform: scale(1.5);
+      transform: scale(1.5);
     }
   }
     .folio__item:before {
