--- a/css/marinulon.css
+++ b/css/marinulon.css
@@ -25,9 +25,9 @@ html{
   font-weight: 300;
   overflow-y:scroll;
   min-height:100%;
-  color: #444444;
+  color: #fffff;
   -webkit-overflow-scrolling: touch;
-	-webkit-tap-highlight-color: #444444;
+	-webkit-tap-highlight-color: #ffffff;
 }
 *, *:before, *:after {
   -webkit-box-sizing: border-box;
@@ -442,9 +442,8 @@ header {
   text-align: center;
   padding: 3em 1em 4em;
   max-width: none;
-  background-image: url(/assets/css_bg--small.jpg);
-  background-repeat: no-repeat;
-  background-size: cover;
+  background-color: #000000;
+  color:#ffffff;
 }
 @media (min-width: 720px) {
   .intro {
@@ -460,7 +459,9 @@ header {
 
   .intro__title,
   .intro__summary,
-  .intro__nav {
+  .intro__nav,
+p,
+h3{
     max-width: 880px;
     margin: 0 auto 30px;
     color: #ffffff;
